src/App.css
@import url('https://db.onlinewebfonts.com/c/485fe91395665a0ac50e25744ff3a19c?family=Get+Schwifty');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  background: #000 url('img/spacebg.jpg') repeat center center/cover;
  height: 100vh;
  color: #fff;
  font-family: Arial, Helvetica, sans-serif;
}

a {
  text-decoration: none;
}

.container {
  max-width: 1100px;
  margin: auto;
  padding: 0 20px;
}

.top-section{
  width: 100%;
  overflow: hidden;
  margin: 0;
  padding: 0;
}

.top-section img {
  width: 100%;
  height: auto;
  max-width: 100vw;
  object-fit: cover;
  display: block;
}

.site-title {
  font-family: 'Get Schwifty', sans-serif;
  font-size: 3.2rem;
  color: #39ff14; /* neon greenish-blue like the logo */
  text-align: center;
  margin-top: 10px;
  margin-bottom: 30px;

  /* Outline */
  -webkit-text-stroke: 1px #000;

  /* Glow effect */
  text-shadow:
    0 0 5px #39ff14,
    0 0 10px #39ff14,
    0 0 20px #00ffff,
    2px 2px 4px rgba(0, 0, 0, 0.6);
}

.btn {
  display: inline-block;
  color: #fff;
  background-color: #3fb573;
  font-size: 1em;
  text-align: center;
  padding: 10px 15px;
  border: 0;
  margin: 10px 0;
}

.load-more-btn {
  display: block;
  margin: 20px auto;
}

header {
  width: 100%;
  margin: 0 auto;
  padding: 0;
}


.center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.search {
  margin-top: 30px;
  margin-bottom: 30px;
  margin-bottom: 30x;
  text-align: center;
}

input[type='text'] {
  display: block;
  padding: 10px;
  font-size: 20px;
  border: 0;
  border-radius: 5px;
  width: 60%;
  margin: auto;
  outline: none;
}

.cards {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 1rem;
}

.card {
  cursor: pointer;
  background-color: transparent;
  height: 300px;
  perspective: 1000px;
}

.card h1 {
  font-size: 25px;
  border-bottom: 1px #fff solid;
  padding-bottom: 10px;
  margin-bottom: 10px;
}

.card img {
  width: 100%;
  height: 300px;
  object-fit: cover;
}

.card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.card:hover .card-inner {
  transform: rotateY(180deg);
}

.card-front,
.card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.card-back {
  background-color: #333;
  color: white;
  padding: 20px;
  transform: rotateY(180deg);
}

.card li {
  list-style: none;
  padding-bottom: 10px;
}

@media (max-width: 800px) {
  .cards {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 500px) {
  .cards {
    grid-template-columns: 1fr;
  }
  .card img {
    width: 100%;
    height: 300px;
    object-fit: contain;
  }
}

@media (max-width: 600px) {
  .council-title {
    font-size: 2.2rem;
  }
}

